--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@ title: Home
           {% else %}
           {{ post.excerpt }}
           {% endif %} 
-          <a class="read-more" href="{{ post.url | prepend: site.baseurl }}"> »  </a>
         </p> 
       </div>
       <footer class="post_meta">
@@ -33,25 +32,22 @@ title: Home
         </span>
         {% endif %}
         <!--
-        {% for category in post.categories %}
-        <a href="{{"/category/" | append: category | prepend: site.baseurl }}">
+        -->
+        {% for tag in post.tags %}
+        <a href="{{ "/tags" | prepend: site.baseurl }}#{{ tag }}">
           <data data-icon="ei-archive"></data>
-          {{category}}</a>
+          {{ tag  }}</a>
         {% endfor %}
+        <!--
         -->
 
         <!--
-        {% if post.author %}
-        <span class="author_meta">
-          <img src="{{site.baseurl}}/assets/img/{{post.author}}.jpg"></img>
-          <span>David Lin</span>
-        </span>
-        {% endif %}
         -->
-
-        <!--p class="readmore">
-          <a href=""><data data-icon="ei-arrow-right"></data>Read this article  </a>
-        </p-->
+          <p class="readmore">
+          <a href="{{ post.url | prepend: site.baseurl }}"><data data-icon="ei-arrow-right"></data>Read this article  </a>
+        </p
+        <!--
+        -->
       </footer>
       <hr/>
     </article>
