--- a/archive.html
+++ b/archive.html
@@ -9,21 +9,40 @@ title: Archive
 
   <section class="archive_list">
     {% for category in site.categories %}
+    {% if category[0] != 'others' %}
 
-    <div class="category-name">
-      <h2>{{ category | first }}</h2>
-    </div>
-      {% for post in category.last %}
-
-      <div class="post_title">
-        <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title}}</a>
-        <span class="date">{{ post.date | date: "%-d %b, %Y" }}</span>
+      <div class="category-name">
+        <h2>{{ category[0] }}</h2>
       </div>
+        {% for post in category.last %}
 
-      {% endfor %}
+        <div class="post_title">
+          <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+          <span class="date">{{ post.date | date: "%-d %b, %Y" }}</span>
+        </div>
+
+        {% endfor %}
+      {% endif %}
 
     {% endfor %}
 
+    {% for category in site.categories %}
+    {% if category[0] == 'others' %}
+
+      <div class="category-name">
+        <h2>{{ category[0] }}</h2>
+      </div>
+        {% for post in category.last %}
+
+        <div class="post_title">
+          <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+          <span class="date">{{ post.date | date: "%-d %b, %Y" }}</span>
+        </div>
+
+        {% endfor %}
+      {% endif %}
+
+    {% endfor %}
   </section>
 
   <footer class="article-footer" mar>
